--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -45,6 +45,15 @@ padding: 50px ;
    background-color:  #f4f1ec;
    margin: 0 auto; 
   }
+  #error-msg{
+    color: #D8000C;
+    background-color: #FFD2D2;
+    margin:10px 22px;
+    font-size:2em;
+    vertical-align:middle;
+    border-radius:.5em;
+    box-shadow:1px 1px 3px #888;
+  }
 
 .red{
   color: red;
